--- a/races/build.gradle
+++ b/races/build.gradle
@@ -35,6 +35,8 @@ configurations {
 }
 
 dependencies {
+    implementation group: 'org.jsoup', name: 'jsoup', version: '1.18.1'
+
     developmentOnly("org.springframework.boot:spring-boot-devtools")
     compileOnly "io.micronaut:micronaut-inject-groovy"
     console "org.grails:grails-console"
