--- a/PegasusDataStore/grails-app/conf/application.yml
+++ b/PegasusDataStore/grails-app/conf/application.yml
@@ -46,6 +46,10 @@ environments:
 
 ---
 grails:
+    cors:
+        enabled: true
+        allowedOrigins: ['http://localhost:4200']
+        allowedMethods: ['GET', 'POST', 'PUT', 'DELETE', 'OPTIONS']
     mime:
         disable:
             accept:
