--- a/PegasusDataStore/grails-app/conf/application.yml
+++ b/PegasusDataStore/grails-app/conf/application.yml
@@ -30,6 +30,12 @@ spring:
                 - '**/*.gson'
                 - 'logback.groovy'
                 - '*.properties'
+springdoc:
+    api-docs:
+        path: /api-docs
+    swagger-ui:
+        path: /swagger-ui
+    packages-to-scan: pegasusdatastore
 environments:
     development:
         management:
