--- a/PegasusDataStore/grails-app/conf/application.yml
+++ b/PegasusDataStore/grails-app/conf/application.yml
@@ -95,6 +95,9 @@ grails:
         defaultScope: singleton
     converters:
         encoding: UTF-8
+        json:
+            default:
+                deep: false
     views:
         default:
             codec: html
