--- a/PegasusFront/package.json
+++ b/PegasusFront/package.json
@@ -22,7 +22,7 @@
     "@fortawesome/fontawesome-free": "^6.7.1",
     "@fortawesome/fontawesome-svg-core": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
-    "primeflex": "^3.3.1",
+    "bootstrap": "^5.3.3",
     "primeicons": "^5.0.0",
     "primeng": "^15.4.1",
     "rxjs": "~7.8.0",
