--- a/UsersDataStore/grails-app/conf/application.yml
+++ b/UsersDataStore/grails-app/conf/application.yml
@@ -1,6 +1,6 @@
 ---
 grails:
-    profile: web
+    profile: rest-api
     codegen:
         defaultPackage: usersdatastore
     gorm:
@@ -8,6 +8,22 @@ grails:
             # Whether to translate GORM events into Reactor events
             # Disabled by default for performance reasons
             events: false
+
+    plugin:
+        springsecurity:
+            rest:
+                token:
+                    storage:
+                        jwt:
+                            secret: 'uma_chave_muito_secreta_e_bem_longa_para_segurança' # Use uma chave segura
+                            expiration: 3600 # Token válido por 1 hora
+                stateless: true
+                login:
+                    endpointUrl: '/login' # Endpoint de login
+                logout:
+                    endpointUrl: '/logout' # Endpoint de logout
+                tokenValidation:
+                    endpointUrl: '/validate' # Endpoint para validar o token
 info:
     app:
         name: '@info.app.name@'
@@ -56,28 +72,22 @@ grails:
                         - Presto
                         - Trident
         types:
-            all: '*/*'
+            json:
+              - application/json
+              - text/json   
+            hal:
+              - application/hal+json
+              - application/hal+xml  
+            xml:
+              - text/xml
+              - application/xml                                 
             atom: application/atom+xml
             css: text/css
             csv: text/csv
-            form: application/x-www-form-urlencoded
-            html:
-              - text/html
-              - application/xhtml+xml
             js: text/javascript
-            json:
-              - application/json
-              - text/json
-            multipartForm: multipart/form-data
-            pdf: application/pdf
             rss: application/rss+xml
             text: text/plain
-            hal:
-              - application/hal+json
-              - application/hal+xml
-            xml:
-              - text/xml
-              - application/xml
+            all: '*/*'            
     urlmapping:
         cache:
             maxsize: 1000
@@ -85,17 +95,6 @@ grails:
         defaultScope: singleton
     converters:
         encoding: UTF-8
-    views:
-        default:
-            codec: html
-        gsp:
-            encoding: UTF-8
-            htmlcodec: xml
-            codecs:
-                expression: html
-                scriptlet: html
-                taglib: none
-                staticparts: none
 
 ---
 hibernate:
@@ -106,23 +105,28 @@ hibernate:
 dataSource:
     pooled: true
     jmxExport: true
-    driverClassName: org.h2.Driver
-    username: sa
-    password: ''
+    driverClassName: org.postgresql.Driver
+    username: postgres
+    password: 123
+    dialect: org.hibernate.dialect.PostgreSQLDialect
+    logSql: true
+    formatSql: true
+server:
+    port: 8083
 
 environments:
     development:
         dataSource:
-            dbCreate: create-drop
-            url: jdbc:h2:mem:devDb;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+            dbCreate: update
+            url: jdbc:postgresql://localhost:5432/pegasusbet
     test:
         dataSource:
             dbCreate: update
-            url: jdbc:h2:mem:testDb;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+            url: jdbc:postgresql://localhost:5432/pegasusbet_test
     production:
         dataSource:
             dbCreate: none
-            url: jdbc:h2:./prodDb;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+            url: jdbc:postgresql://localhost:5432/pegasusbet
             properties:
                 jmxEnabled: true
                 initialSize: 5
