--- a/PegasusFront/package.json
+++ b/PegasusFront/package.json
@@ -18,11 +18,13 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@auth0/angular-jwt": "^5.2.0",
     "@fortawesome/angular-fontawesome": "^0.10.2",
     "@fortawesome/fontawesome-free": "^6.7.1",
     "@fortawesome/fontawesome-svg-core": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "bootstrap": "^5.3.3",
+    "ngx-cookie-service": "^15.0.0",
     "primeicons": "^5.0.0",
     "primeng": "^15.4.1",
     "rxjs": "~7.8.0",
