--- a/UsersDataStore/grails-app/conf/application.yml
+++ b/UsersDataStore/grails-app/conf/application.yml
@@ -47,6 +47,10 @@ environments:
 
 ---
 grails:
+    cors:
+        enabled: true
+        allowedOrigins: [ 'http://localhost:4200' ]
+        allowedMethods: [ 'GET', 'POST', 'PUT', 'DELETE', 'OPTIONS' ]
     mime:
         disable:
             accept:
