--- a/PegasusFront/package.json
+++ b/PegasusFront/package.json
@@ -23,11 +23,14 @@
     "@fortawesome/fontawesome-free": "^6.7.1",
     "@fortawesome/fontawesome-svg-core": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
+    "@stomp/stompjs": "^7.0.0",
     "bootstrap": "^5.3.3",
     "ngx-cookie-service": "^15.0.0",
     "primeicons": "^5.0.0",
     "primeng": "^15.4.1",
     "rxjs": "~7.8.0",
+    "rxjs-websockets": "^9.0.0",
+    "sockjs-client": "^1.6.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
@@ -36,6 +39,7 @@
     "@angular/cli": "~15.2.11",
     "@angular/compiler-cli": "^15.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/sockjs-client": "^1.5.4",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
