feat: add column totalBetsAmount to raceHorseJockey
add kafka topic to increase total bet amount on raceHorseJockey when new bet is placed

--- a/RaceSimulation/package.json
+++ b/RaceSimulation/package.json
@@ -1,10 +1,10 @@
 {
   "name": "racesimulation",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "src/index.ts",
   "scripts": {
     "start": "node dist/index.js",
-    "dev": "ts-node index.ts",
+    "dev": "ts-node src/index.ts",
     "build": "tsc"
   },
   "keywords": [],
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.10.2",
+    "@types/ws": "^8.5.13",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
   }
